docs: update documentation
